<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191616"
    tools:context=".Registrarse">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="270dp"
        android:layout_height="285dp"
        android:background="@drawable/logo_claro"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.369"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/button5"
        android:layout_width="89dp"
        android:layout_height="75dp"
        android:backgroundTint="#131313"
        android:text="@string/inicio"
        android:textColor="#FFC107"
        android:textSize="15sp"
        android:onClick="inicio"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textStyle="bold" />

    <Button
        android:id="@+id/button6"
        android:layout_width="183dp"
        android:layout_height="67dp"
        android:layout_marginTop="520dp"
        android:backgroundTint="#0E0E0E"
        android:text="@string/registrarse"
        android:onClick="inicio"
        android:textColor="#FFC107"
        android:textSize="15sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="359dp"
        android:layout_height="60dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:hint="@string/Nombre"
        android:inputType="textPersonName"
        android:textColor="#FFC107"
        android:textColorHighlight="#FF9800"
        android:textColorHint="#FFC107"
        android:textColorLink="#FFC107"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextEmailAddress3"
        android:layout_width="359dp"
        android:layout_height="60dp"
        android:ems="20"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#FFC107"
        android:textColorHighlight="#FFC107"
        android:textColorHint="#FFC107"
        android:textColorLink="#FFC107"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.0"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="359dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/ID"
        android:inputType="textPersonName"
        android:textColor="#FFC107"
        android:textColorHighlight="#FFC107"
        android:textColorHint="#FFC107"
        android:textColorLink="#FFC107"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="359dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/Direccion"
        android:inputType="textPersonName"
        android:textColor="#FFC107"
        android:textColorHint="#FFC107"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.491"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="359dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/Descripcion"
        android:inputType="textPersonName"
        android:textColor="#FFC107"
        android:textColorHint="#FFC107"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.581"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="69dp"
        android:layout_height="38dp"
        android:text="Genero"
        android:textColor="#FFC107"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695" />

</androidx.constraintlayout.widget.ConstraintLayout>