<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191616"
    tools:context=".IniciarSesion">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="270dp"
        android:layout_height="285dp"
        android:background="@drawable/logo_claro"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.634"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="179dp"
        android:layout_height="42dp"
        android:gravity="center"
        android:text="@string/bienvenido"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="338dp"
        android:layout_height="84dp"
        android:layout_marginTop="59dp"
        android:gravity="center"
        android:onClick="signIn"
        android:text="@string/ahora_pedir_a_domicilio_es_facil_mejoramos_para_seguir_entregandote_nuestro_sabor_unico"
        android:textColor="#F4F0F0"
        android:textSize="20sp"
        android:textStyle="normal|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.001" />

    <Button
        android:id="@+id/button3"
        android:layout_width="301dp"
        android:layout_height="84dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#131313"
        android:onClick="signIn"
        android:text="@string/iniciar_sesion"
        android:textColor="#FFC107"
        android:textSize="17sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="74dp"
        android:layout_height="27dp"
        android:text="@string/email"
        android:textColor="#F8F5F5"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contrasenia"
        android:textColor="#F8F5F5"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <EditText
        android:id="@+id/passUser"
        android:layout_width="238dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="#FDFAFA"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.305"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#ECE8E8"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.524" />

    <Button
        android:id="@+id/button5"
        android:layout_width="89dp"
        android:layout_height="75dp"
        android:backgroundTint="#131313"
        android:text="inicio"
        android:onClick="inicio"
        android:textColor="#FFC107"
        android:textSize="15sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textStyle="bold|italic" />


</androidx.constraintlayout.widget.ConstraintLayout>